mybatis xmlMapper 作成及びDB接続

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,10 @@
 server.port=8080
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.password=mj215kim
+spring.datasource.hikari.driver-class-name=org.postgresql.Driver
+spring.datasource.hikari.jdbc-url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.hikari.username=postgres
+spring.datasource.hikari.password=mj215kim
+
+#MyBatis
+mybatis.mapper-locations=classpath:/mappers/*Mapper.xml
+mybatis.configuration.map-underscore-to-camel-case=true
 
